--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 11 19:55:54 KST 2021
-sdk.dir=C\:\\Users\\cas50\\AppData\\Local\\Android\\Sdk
+#Wed May 12 23:19:55 KST 2021
+sdk.dir=C\:\\Users\\mingyu\\AppData\\Local\\Android\\Sdk
