--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".activity_05"></activity>
         <activity android:name=".Musicselect"></activity>
         <activity android:name=".ui2"></activity>
-        <activity android:name=".ui1" />
+        <activity android:name=".ui1"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
