--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 11 19:55:54 KST 2021
-sdk.dir=C\:\\Users\\cas50\\AppData\\Local\\Android\\Sdk
+#Fri May 14 12:33:26 KST 2021
+sdk.dir=C\:\\Users\\inho1\\AppData\\Local\\Android\\Sdk
